# metis

./: .coveragerc  .gitignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  Pipfile  README.md  asgi.py  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  settings.py  setup.py  style.sh  tox.ini  vault.py  wsgi.py
.github/workflows/: ci.yaml  prod_release.yaml  test.yaml
app/: __init__.py  action.py  active.py  auth.py  basic_services.py  card_router.py  celery.py  celery_client.py  factory.py  hermes.py  reporting.py  resources.py  services.py  slack.py  tasks.py  teams.py  utils.py  visa_handback_file_processor.py  visa_handling.py
app/agents/: __init__.py  agent_base.py  agent_manager.py  amex.py  mastercard.py  mc_template.xml  secrets.py  spreedly.py  visa.py  visa_offers.py
app/agents/templates/: mc_do_echo_template.xml  mc_remove_template.xml  mc_update_template.xml
app/jobs/: visa_batch_create.py
app/tests/fixtures/: LOYANG_REG_PAN_1483460158.LOYANG_RESP.D170103.pgp
app/tests/integration/: test_amex_integration.py  test_mastercard_integration.py  test_resources_integration.py  test_spreedly_service.py  test_visa_handback_file_processor_integration.py  test_visa_integration.py
app/tests/unit/: deprecated_test_visa.py  deprecated_test_visa_handback_file_processor.py  deprecated_test_visa_offers.py  fixture.py  suspended_test_visa_offers.py  test_amex.py  test_auth.py  test_hermes.py  test_mastercard.py  test_resources.py  test_services.py  test_visa.py  test_visa_handback_file_processor.py  test_visa_offers.py
config/etc/default/: celeryd-metis
docker_root/etc/cont-init.d/: 01-build-envfile
docker_root/etc/nginx/conf.d/: metis.conf
docker_root/etc/uwsgi/sites/: metis.ini
docker_root/root/.ssh/: id_rsa  id_rsa.pub
environment/: __init__.py
jobs/: visa_batch_create.py
logs/: file_log.txt
metis/: __init__.py  action.py  active.py  auth.py  basic_services.py  card_router.py  celery.py  enums.py  factory.py  hermes.py  middlware.py  reporting.py  resources.py  services.py  settings.py  tasks.py  teams.py  utils.py  vault.py  version.py  visa_handback_file_processor.py
metis/agents/: __init__.py  agent_base.py  agent_manager.py  amex.py  mastercard.py  spreedly.py  visa.py  visa_offers.py
metis/agents/templates/: mc_enroll_template.xml  mc_template.xml
metis/api/: deps.py  resources.py  schemas.py
metis/jobs/: visa_batch_create.py
metis/prometheus/: __init__.py  logging.py  metrics.py
prometheus/: __init__.py  metrics.py
tests/integration/: test_amex_integration.py  test_mastercard_integration.py  test_resources_integration.py  test_spreedly_service.py  test_visa_handback_file_processor_integration.py  test_visa_integration.py
tests/unit/: fixture.py  test_amex.py  test_auth.py  test_hermes.py  test_mastercard.py  test_resources.py  test_services.py  test_unenrol_and_redact.py  test_visa_offers.py
visa_handback_files/: README.txt
